Setup the module, info.yaml and added vga_timing.v (from hftab and Michael Bell)

--- a/info.yaml
+++ b/info.yaml
@@ -1,11 +1,11 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     64000000  # Clock frequency in Hz (or 0 if not applicable)
+  title:        "VGA adapter for TinyQV"                                    # Project title
+  author:       "ReJ aka Renaldas Zioma"                                    # Your name
+  discord:      "rzioma"                                                    # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "High resolution VGA adapter utilising small line buffer"   # One line description of what your project does
+  language:     "Verilog"                                                   # other examples include SystemVerilog, Amaranth, VHDL, etc
+  clock_hz:     64000000                                                    # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x2"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
@@ -17,6 +17,7 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
+    - "vga_timing.v"
     - "peripheral.v"
     - "tt_wrapper.v"
     - "test_harness/falling_edge_detector.sv"
@@ -40,14 +41,14 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "Tiny VGA R1"
+  uo[1]: "Tiny VGA G1"
+  uo[2]: "Tiny VGA B1"
+  uo[3]: "Tiny VGA VSync"
+  uo[4]: "Ting VGA R0"
+  uo[5]: "Tiny VGA G0"
+  uo[6]: "Tiny VGA B0"
+  uo[7]: "Tiny VGA HSync"
 
   # Bidirectional pins
   uio[0]: "user_interrupt"
